menambahkan beberapa fitur: 1. favorite menu 2. profile menu 3. theme setting 4. periodic notification

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -191,6 +191,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:clickable="true"
+            android:contentDescription="@string/todo"
             android:focusable="true"
             app:fabSize="normal"
             app:layout_constraintBottom_toTopOf="@+id/city_name"
