--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -27,11 +27,13 @@
             android:id="@+id/rvFavorite"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            tools:listitem="@layout/item_upcoming_event"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/item_upcoming_event" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
