--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -21,4 +21,9 @@
         android:icon="@drawable/baseline_favorite_24"
         android:title="@string/favorite"/>
 
+    <item
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/baseline_person_24"
+        android:title="@string/profile" />
+
 </menu>
